decoraçãoe deign de interiore

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<h1>-DECORAÇÃO E DESIGN DE INTERIORES- </h1>
+DECORAÇÃO
 
+<p>Ambientes internos bem decorados geram bem-estar e estimulam a criatividade, em casa e no trabalho.Você irá ampliar seus conceitos sobre decoração autoral e ficará por dentro das principais tendências contemporâneas da arte. Esse site vai te ajudar a decorar a sua casa , do jeito que você quiser e como quiser.</p>
+
+<p>A DecorHome  nosso foco é no projeto, trazendo para você decorar a sua casa do jeito que você queira, esse projeto que traz soluções  de espaço e conforto para você. Boas decorações, para você se sentir confortavelmente na sua casa. Bons decoradores  para deixar , a sua casa mais ainda linda.</p>
