--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang ="en">
+<head></head>
+<meta charset="UTF-8">
+</html>
+
 <h1>-DECORAÇÃO E DESIGN DE INTERIORES- </h1>
 DECORAÇÃO
 
